--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
     "@mui/styled-engine-sc": "^6.4.2",
+    "@reduxjs/toolkit": "^2.5.1",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.4",
     "react-router-dom": "^7.1.4",
     "react-toastify": "^11.0.3",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
